Ozhaev Zaynudin cartoon.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp: In function 'void DrawHouse1(int, int, COLORREF)':
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:160:30: warning: left operand of comma operator has no effect [-Wunused-value]
                          { x - 70, y - 100 },
                              ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:160:44: error: expected ';' before '}' token
                          { x - 70, y - 100 },
                                            ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:160:38: warning: right operand of comma operator has no effect [-Wunused-value]
                          { x - 70, y - 100 },
                                      ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:160:45: error: expected primary-expression before ',' token
                          { x - 70, y - 100 },
                                             ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:161:26: error: expected primary-expression before '{' token
                          { x - 50, y - 100 },
                          ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:161:26: error: expected ';' before '{' token
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:161:45: error: expected primary-expression before ',' token
                          { x - 50, y - 100 },
                                             ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:162:26: error: expected primary-expression before '{' token
                          { x - 50, y - 120 }};
                          ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:162:26: error: expected ';' before '{' token
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp: At global scope:
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:140:6: warning: unused parameter 'HoleColor' [-Wunused-parameter]
 void DrawHouse1 (int x, int y, COLORREF HoleColor)
      ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:166:26: error: expected unqualified-id before '{' token
                          { x - 30, y - 100 },
                          ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:166:45: error: expected unqualified-id before ',' token
                          { x - 30, y - 100 },
                                             ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:167:26: error: expected unqualified-id before '{' token
                          { x - 10, y - 100 },
                          ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:167:45: error: expected unqualified-id before ',' token
                          { x - 10, y - 100 },
                                             ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:168:26: error: expected unqualified-id before '{' token
                          { x - 10, y - 120 }};
                          ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:168:45: error: expected declaration before '}' token
                          { x - 10, y - 120 }};
                                             ^
---------------------------------------------------------------------------------------------
[25.04.2021 20:24:33,70 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\1proekt\1proekt> g++.exe "C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp" -o "C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
